tests/fixtures/invalid/round_list_str.py
# Cannot call round() with List[int], Str
x = round([1, 2, 3], "hello")
